[package]
name = "xls2html"
version = "0.1.0"
authors = ["joni moas <setpsistariasbaniou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
calamine = "0.16.2"